gtsamAddTestsGlob(EnergyOptNLP "test*.cpp" "" "${CONVENIENCE_LIB_NAME}")
ADD_EXECUTABLE(testTask testTasks.cpp)
TARGET_LINK_LIBRARIES(testTask ${CONVENIENCE_LIB_NAME})
ADD_EXECUTABLE(testRTA testResponseTimeAnalysis.cpp)
TARGET_LINK_LIBRARIES(testRTA ${CONVENIENCE_LIB_NAME})
ADD_EXECUTABLE(testEnergy1 testEnergy.cpp)
TARGET_LINK_LIBRARIES(testEnergy1 ${CONVENIENCE_LIB_NAME})
ADD_EXECUTABLE(testOpt1 testOpt.cpp)
TARGET_LINK_LIBRARIES(testOpt1 ${CONVENIENCE_LIB_NAME})
ADD_EXECUTABLE(testBatch1 testBatch.cpp)
TARGET_LINK_LIBRARIES(testBatch1 ${CONVENIENCE_LIB_NAME})
ADD_EXECUTABLE(testCompare1 testCompare.cpp)
TARGET_LINK_LIBRARIES(testCompare1 ${CONVENIENCE_LIB_NAME})
# ADD_EXECUTABLE(testScratch1 testScratch.cpp)
# TARGET_LINK_LIBRARIES(testScratch1 ${CONVENIENCE_LIB_NAME})
