gtsamAddTestsGlob(EnergyOptNLP "test*.cpp" "" "${CONVENIENCE_LIB_NAME}")
ADD_EXECUTABLE(testTask testTasks.cpp)
TARGET_LINK_LIBRARIES(testTask ${CONVENIENCE_LIB_NAME})
ADD_EXECUTABLE(testRTA testResponseTimeAnalysis.cpp)
TARGET_LINK_LIBRARIES(testRTA ${CONVENIENCE_LIB_NAME})
ADD_EXECUTABLE(testEnergy1 testEnergy.cpp)
TARGET_LINK_LIBRARIES(testEnergy1 ${CONVENIENCE_LIB_NAME})
ADD_EXECUTABLE(testOpt1 testOpt.cpp)
TARGET_LINK_LIBRARIES(testOpt1 ${CONVENIENCE_LIB_NAME})
ADD_EXECUTABLE(OptFile testOptFile.cpp)
TARGET_LINK_LIBRARIES(OptFile ${CONVENIENCE_LIB_NAME})


ADD_EXECUTABLE(LLBatch testLLBatch.cpp)
TARGET_LINK_LIBRARIES(LLBatch ${CONVENIENCE_LIB_NAME})
ADD_EXECUTABLE(LLCompare testLLBatchCompare.cpp)
TARGET_LINK_LIBRARIES(LLCompare ${CONVENIENCE_LIB_NAME})

ADD_EXECUTABLE(WAPBatch testWAPBatch.cpp)
TARGET_LINK_LIBRARIES(WAPBatch ${CONVENIENCE_LIB_NAME})
ADD_EXECUTABLE(WAPCompare testWAPBatchCompare.cpp)
TARGET_LINK_LIBRARIES(WAPCompare ${CONVENIENCE_LIB_NAME})

